--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,8 @@ mapping_channel=parchment
 # This must match the format required by the mapping channel.
 mapping_version=2023.09.03-1.20.1
 
+## Dependency Propierties
+geckolib_version=4.4.9
 
 ## Mod Properties
 
